hacked in solution to ide overflow issue

--- a/app/stylesheets/ide.sass
+++ b/app/stylesheets/ide.sass
@@ -5,10 +5,17 @@
 $nav_left: 220px
 
 #fullscreen
-  #run
+  button.save
     +border-right-radius(0)
 
     margin-right: 0
+
+  #run
+    +border-right-radius(0)
+    +border-left-radius(0)
+
+    margin-right: 0
+    margin-left: 0
 
   #publish
     +border-left-radius(0)
@@ -27,7 +34,9 @@ $nav_left: 220px
       background-color: $light_highlight
 
   section
+    overflow: hidden
     padding-left: $nav_left + 20px
+    padding-bottom: 40px
 
   .treeview ul
     background-color: transparent
@@ -39,7 +48,9 @@ ul.filetree
   +bounds(100%)
 
   display: inline-block
-  margin: 1em
+  margin-top: 0.25em
+  margin-left: 1em
+  margin-right: 1em
   overflow-x: hidden
   vertical-align: top
 
@@ -108,6 +119,9 @@ ul.filetree
         position: absolute
         right: 1.5em
         top: 0.5em
+
+  form
+    height: 100%
 
   li
     .ui-icon-close
